---
source: crates/rattler_menuinst/src/schema.rs
expression: schema
---
MenuInstSchema {
    id: "https://schemas.conda.io/menuinst-1.schema.json",
    schema: "https://json-schema.org/draft-07/schema",
    menu_name: "superspyder",
    menu_items: [
        MenuItem {
            name: Complex(
                NameComplex {
                    target_environment_is_base: "superspyder 1.2 (base)",
                    target_environment_is_not_base: "superspyder 1.2 ({{ ENV_NAME }})",
                },
            ),
            description: "Scientific PYthon Development EnviRonment",
            command: [
                "",
            ],
            icon: Some(
                "{{ MENU_DIR }}/superspyder.{{ ICON_EXT }}",
            ),
            precommand: None,
            precreate: None,
            working_dir: None,
            activate: Some(
                false,
            ),
            terminal: Some(
                false,
            ),
            platforms: Platforms {
                linux: Some(
                    Linux {
                        base: BasePlatformSpecific {
                            name: None,
                            description: "",
                            icon: None,
                            command: [
                                "{{ PREFIX }}/bin/spyder",
                                "%F",
                            ],
                            working_dir: None,
                            precommand: None,
                            precreate: None,
                            activate: None,
                            terminal: None,
                        },
                        categories: Some(
                            [
                                "Development",
                                "Science",
                            ],
                        ),
                        dbus_activatable: None,
                        generic_name: None,
                        hidden: None,
                        implements: None,
                        keywords: None,
                        mime_type: Some(
                            [
                                "text/x-python",
                            ],
                        ),
                        no_display: None,
                        not_show_in: None,
                        only_show_in: None,
                        prefers_non_default_gpu: None,
                        startup_notify: None,
                        startup_wm_class: Some(
                            "Spyder-__PKG_MAJOR_VER__.{{ ENV_NAME }}",
                        ),
                        try_exec: None,
                        glob_patterns: None,
                    },
                ),
                osx: Some(
                    MacOS {
                        base: BasePlatformSpecific {
                            name: None,
                            description: "",
                            icon: None,
                            command: [
                                "./python",
                                "{{ PREFIX }}/bin/spyder",
                                "$@",
                            ],
                            working_dir: None,
                            precommand: Some(
                                "pushd \"$(dirname \"$0\")\" &>/dev/null",
                            ),
                            precreate: None,
                            activate: None,
                            terminal: None,
                        },
                        cf_bundle_display_name: None,
                        cf_bundle_identifier: Some(
                            "org.superspyder-ide.Superspyder-__PKG_MAJOR_VER__-__CFBID_ENV__",
                        ),
                        cf_bundle_name: Some(
                            "Superspyder __PKG_MAJOR_VER__",
                        ),
                        cf_bundle_spoken_name: None,
                        cf_bundle_version: Some(
                            "__PKG_VERSION__",
                        ),
                        cf_bundle_url_types: None,
                        cf_bundle_document_types: Some(
                            [
                                CFBundleDocumentTypesModel {
                                    cf_bundle_type_icon_file: Some(
                                        "superspyder.icns",
                                    ),
                                    cf_bundle_type_name: "text document",
                                    cf_bundle_type_role: Some(
                                        "Editor",
                                    ),
                                    ls_item_content_types: [
                                        "com.apple.applescript.text",
                                        "com.apple.ascii-property-list",
                                        "com.apple.audio-unit-preset",
                                        "com.apple.binary-property-list",
                                        "com.apple.configprofile",
                                        "com.apple.crashreport",
                                        "com.apple.dashcode.css",
                                        "com.apple.dashcode.javascript",
                                        "com.apple.dashcode.json",
                                        "com.apple.dashcode.manifest",
                                        "com.apple.dt.document.ascii-property-list",
                                        "com.apple.dt.document.script-suite-property-list",
                                        "com.apple.dt.document.script-terminology-property-list",
                                        "com.apple.property-list",
                                        "com.apple.rez-source",
                                        "com.apple.scripting-definition",
                                        "com.apple.structured-text",
                                        "com.apple.traditional-mac-plain-text",
                                        "com.apple.xcode.ada-source",
                                        "com.apple.xcode.apinotes",
                                        "com.apple.xcode.bash-script",
                                        "com.apple.xcode.configsettings",
                                        "com.apple.xcode.csh-script",
                                        "com.apple.xcode.entitlements-property-list",
                                        "com.apple.xcode.fortran-source",
                                        "com.apple.xcode.glsl-source",
                                        "com.apple.xcode.ksh-script",
                                        "com.apple.xcode.lex-source",
                                        "com.apple.xcode.make-script",
                                        "com.apple.xcode.mig-source",
                                        "com.apple.xcode.pascal-source",
                                        "com.apple.xcode.strings-text",
                                        "com.apple.xcode.tcsh-script",
                                        "com.apple.xcode.yacc-source",
                                        "com.apple.xcode.zsh-script",
                                        "com.apple.xml-property-list",
                                        "com.netscape.javascript-source",
                                        "com.scenarist.closed-caption",
                                        "com.sun.java-source",
                                        "com.sun.java-web-start",
                                        "net.daringfireball.markdown",
                                        "org.khronos.glsl-source",
                                        "org.oasis-open.xliff",
                                        "public.ada-source",
                                        "public.assembly-source",
                                        "public.bash-script",
                                        "public.c-header",
                                        "public.c-plus-plus-header",
                                        "public.c-plus-plus-source",
                                        "public.c-source",
                                        "public.case-insensitive-text",
                                        "public.comma-separated-values-text",
                                        "public.csh-script",
                                        "public.css",
                                        "public.delimited-values-text",
                                        "public.dylan-source",
                                        "public.filename-extension",
                                        "public.fortran-77-source",
                                        "public.fortran-90-source",
                                        "public.fortran-95-source",
                                        "public.fortran-source",
                                        "public.html",
                                        "public.json",
                                        "public.ksh-script",
                                        "public.lex-source",
                                        "public.log",
                                        "public.m3u-playlist",
                                        "public.make-source",
                                        "public.mig-source",
                                        "public.mime-type",
                                        "public.module-map",
                                        "public.nasm-assembly-source",
                                        "public.objective-c-plus-plus-source",
                                        "public.objective-c-source",
                                        "public.opencl-source",
                                        "public.pascal-source",
                                        "public.patch-file",
                                        "public.perl-script",
                                        "public.php-script",
                                        "public.plain-text",
                                        "public.python-script",
                                        "public.rss",
                                        "public.ruby-script",
                                        "public.script",
                                        "public.shell-script",
                                        "public.source-code",
                                        "public.tcsh-script",
                                        "public.text",
                                        "public.utf16-external-plain-text",
                                        "public.utf16-plain-text",
                                        "public.utf8-plain-text",
                                        "public.utf8-tab-separated-values-text",
                                        "public.xhtml",
                                        "public.xml",
                                        "public.yacc-source",
                                        "public.yaml",
                                        "public.zsh-script",
                                    ],
                                    ls_handler_rank: "Default",
                                },
                            ],
                        ),
                        ls_application_category_type: None,
                        ls_background_only: None,
                        ls_environment: None,
                        ls_minimum_system_version: None,
                        ls_multiple_instances_prohibited: None,
                        ls_requires_native_execution: None,
                        ns_supports_automatic_graphics_switching: None,
                        ut_exported_type_declarations: None,
                        ut_imported_type_declarations: None,
                        entitlements: None,
                        link_in_bundle: Some(
                            {
                                "{{ PREFIX }}/bin/python": "{{ MENU_ITEM_LOCATION }}/Contents/MacOS/python",
                            },
                        ),
                        event_handler: None,
                    },
                ),
                win: Some(
                    Windows {
                        base: BasePlatformSpecific {
                            name: None,
                            description: "",
                            icon: None,
                            command: [
                                "{{ PREFIX }}/Scripts/superspyder.exe",
                                "%*",
                            ],
                            working_dir: None,
                            precommand: None,
                            precreate: None,
                            activate: None,
                            terminal: None,
                        },
                        desktop: Some(
                            true,
                        ),
                        quicklaunch: None,
                        terminal_profile: None,
                        url_protocols: None,
                        file_extensions: Some(
                            [
                                ".enaml",
                                ".ipy",
                                ".py",
                                ".pyi",
                                ".pyw",
                                ".pyx",
                            ],
                        ),
                        app_user_model_id: Some(
                            "superspyder-ide.superspyder-__PKG_MAJOR_VER__.{{ ENV_NAME }}",
                        ),
                    },
                ),
            },
        },
    ],
}
